# fast-api-learning-project

./: README.md  pyproject.toml  requirements.txt
src/: database.py  main.py  models.py  utils.py
src/auth/: auth.py  models.py  router.py  schemas.py
